# Spin-a-Yarn-Game

./: README.md  Requirements.txt  pyproject.toml
src/spin_a_yarn/: __init__.py  main.py  story_engine.py  tts.py
src/spin_a_yarn/assets/: prompts.json
tests/: test_story_engine.py  test_tts.py
