[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spin-a-yarn"
version = "0.1.0"
description = "A Tkinter-based collaborative storytelling game with offline TTS"
readme = "README.md"
authors = [{name = "Mobin Yousefi", email = ""}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "pyttsx3>=2.90",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/spin-a-yarn-game"
Issues = "https://github.com/mobinyousefi-cs/spin-a-yarn-game/issues"

[project.scripts]
spin-a-yarn = "spin_a_yarn.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"spin_a_yarn" = ["assets/*.json"]

[tool.ruff]
select = ["E", "F", "I", "UP", "N", "B", "C4"]
ignore = ["E501"]
line-length = 100
target-version = "py39"

[tool.ruff.lint.isort]
known-first-party = ["spin_a_yarn"]

[tool.black]
line-length = 100
target-version = ["py39"]
